Graphical interface done with intent and service not called

--- a/PracticalTest01Var06/app/src/main/res/values/strings.xml
+++ b/PracticalTest01Var06/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PracticalTest01Var06</string>
     <string name="more_details">More details</string>
     <string name="fail">Fail</string>
+    <string name="pass">Pass</string>
 </resources>
